# hello

./: README.md  j.sh  x11.sh  我的latex.rar
shuxueku/: .touzizuhe.py.swp  11.py  a.py  changwei.py  fangjia.py  jinrongshijian.py  jisuan.py  juzhen.py  liedaoshu.py  matrixcom.py  ode1.py  plot.py  pp.py  svd.py  tidu.py  touzizuhe.py  xiangduilun.py  xiassr.py  zhishu.py
shuxueku/dde_C++/myddev1/: CMakeLists.txt  ddetool.cpp  makefile  pax_global_header
shuxueku/dde_C++/myddev1/test/: makefile  n.cpp
shuxueku/dde_C++/myddev1/test/nlopt/include/: include - 快捷方式.lnk
shuxueku/dde_C++/opti==c++/: CMakeLists.txt  Makefile  README.md  ex1.cpp  ex1.h  example1.exe.stackdump  main.cpp  makefile  mydde_tool.cpptest  notes.txt  op1.c  pro.cpp  pro.cpp.save  pro.h  readme.txt  run_test.sh  use_eigen.cpp  use_eigen.cpp.save  use_eigen.cpp.save.1  use_opencv.cpp
shuxueku/dde_C++/opti==c++/build_by_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  ddetest  run_test.sh  run_test.sh.save
shuxueku/dde_C++/opti==c++/build_by_cmake/build_by_cmake/opti==c++/: pro.cpp
shuxueku/dde_C++/opti==c++/doc/: descritption1.md  说明.aux  说明.tex
shuxueku/ga/: ga.c
shuxueku/myddev1/: CMakeLists.txt  ddetool.h  example1.exe.stackdump  mydde_tool.cpp  run.sh
shuxueku/myddev1/build_by_cmake/: run_test.sh
shuxueku/myddev1/test/nlopt/lib/pkgconfig/: nlopt.pc
shuxueku/opt_C++/: op2.cpp
shuxueku/zuiyou/: .a.sh.swp  .keshi.py.swo  .myfun.c.swp  .myfun.h.swp  0618.c  A.txt  Ad.txt  Q.txt  a  a.out  a.sh  ceshi.txt  clapack-3.1.1.1.tgz.aria2  demo.c  fft.c  fftwinstall.sh  hello.c  hello.c~  keshi.py  keshi.py~  kongzhi.c  kongzhi.c~  kongzhidemo.c  kongzhidemo.c~  kz.sh  kz.sh~  lbfgs.sh  log.txt  makefile  mk2  mk3  mk4  myfun.c  myfun.c~  myfun.h  myfun.h~  new.sh  new2.sh  ofun.c  ofun.c~  (+10 more)
shuxueku/zuiyou/liblbfgs-1.10/: Makefile  config.status  libtool
shuxueku/zuiyou/liblbfgs-1.10/lib/: Makefile
shuxueku/zuiyou/liblbfgs-1.10/lib/.deps/: lbfgs.Plo
shuxueku/zuiyou/liblbfgs-1.10/sample/: Makefile  sample
shuxueku/zuiyou/liblbfgs-1.10/sample/.deps/: sample.Po
shuxueku/zuiyou/liblbfgs-1.10/sample/.libs/: lt-sample  sample
shuxueku/延时相关代码/最优控制K/: canshu2Ki.m  jijiezhen.m  main.m  mcost.m  panding.m  peidian.m  solFt.m  solFthis.m  xishu.m
shuxueku/延时相关代码/稳定性判别代码/: bug.m  ceshi.m  gam.m  panding.m
shuxueku/延时相关代码/系统仿真代码/: ff.m  hmain.m  myut.m  rea.m  reahis.m
tools/: bili_pic_vid.py  ipfa.py  ipfav2.py  jiance.py  linux安装.txt  mingling.txt  myan.py  mygit.py  pdftongji.py  pic_write.py  quchong.sh  sousuo.py  weban.py  youjian.py
tools/bro/: bro.py  hellorss.py  readme  rssbiao.txt
tools/b站工具/: bili.py  bili_fenxi.py  bili_pic_vid.py  bili_quguan.py  bili_quguan_v2.py  bili_quguan_v3.py  bili_space.py  bili_space_v2.py  bili_vid.sh  mysql_handle.py  mysql_handle_loc.py  mysql_read.py  name_id.txt  name_id_read.txt  nb.py  nb1.py  readme.md  vv_bili_fenxi.py
tools/c语言测速/: sort1.c  speed.c
tools/file2tiff/: README.MD  f2tiff-v2.py  file2tiff.py
tools/python android socket/: client.py  server.py  ssock.py
tools/searchbook/: sousuo.py
tools/socksproxy/: ceshi.py  getip.py  gip.py  iii.py  ipcv2.py
tools/wx/: readme.md  step1.py  step2_fenxi_mitm.py
tools/微盘/: README.MD  an3.py
